syntax = "proto3";

package cmtoobvajr.eqxdywkqqi.nizvnof;

option go_package = "github.com/regen-network/proto-any-benchmark/c";

message MsgIggmhogotlAdolnphpfi {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

message MsgCrbjxhtnahzEkoyklxdc {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

message MsgUzewjmoiKursyvlk {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

