syntax = "proto3";

package phbexmzdpk.jbduaip.gxwdhenwu;

option go_package = "github.com/regen-network/proto-any-benchmark/d";

message MsgBtolfeintfGglqwlxnq {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

message MsgMuqmoycgmDomajqaep {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

message MsgTqviyexlSsdnfgf {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
    bytes f = 6;
    string g = 7;
    bytes h = 8;
    string i = 9;
    bytes j = 10;
}

