syntax = "proto3";

package vzzlqdoi.hrxpdwcnqc.exnyzopfka;

option go_package = "e";

message MsgJirzatkEjglwxlp {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
}

message MsgUzaztuwkehwWuhanr {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
}

message MsgXoxmigzwnxqIniehuizyb {
    string a = 1;
    bytes b = 2;
    uint64 c = 3;
    string d = 4;
    int64 e = 5;
}


